separated cards into rolls, want to try flex wrap first

--- a/flex/06-flex-layout/index.html
+++ b/flex/06-flex-layout/index.html
@@ -9,34 +9,43 @@
   </head>
   <body>
     <div class="header">
-      <ul class="left-links">
-        <li><a href="#">About</a></li>
-        <li><a href="#">Store</a></li>
-      </ul>
-      <ul class="right-links">
-        <li><a href="#">Profile</a></li>
-        <li><a href="#">Settings</a></li>
-      </ul>
+      <div class="left-links">
+        <div><a href="#">About</a></div>
+        <div><a href="#">Store</a></div>
+      </div>
+      <div class="right-links">
+        <div><a href="#">Profile</a></div>
+        <div><a href="#">Settings</a></div>
+      </div>
     </div>
+
+    
     <div class="content">
       <img src="./logo.png" alt="Project logo. Represents odin with the project name.">
       <div class="input">
         <input type="text">
       </div>
-      <div class="buttons">
+         <div class="button-holder">
+      <div class="button">
         <button>Do the thing!</button>
         <button>Do the other thing!</button>
       </div>
+         </div>
     </div>
+
+ 
+
     <div class="footer">
-      <ul class="left-links">
-        <li><a href="#">Advertising</a></li>
-        <li><a href="#">Business</a></li>
-      </ul>
-      <ul class="right-links">
-        <li><a href="#">Privacy</a></li>
-        <li><a href="#">Terms</a></li>
-      </ul>
+      <div class="bottomleft-links">
+        <div><a href="#">Advertising</a></div>
+        <div><a href="#">Business</a></div>
+      </div>
+      <ul class="bottomright-links">
+        <div><a href="#">Privacy</a></div>
+        <div><a href="#">Terms</a></div>
+      </div>
     </div>
   </body>
 </html>
+
+
